tests/ui/consts/const-extern-fn/const-extern-fn-min-const-fn.stderr
error: pointers cannot be cast to integers during const eval
  --> $DIR/const-extern-fn-min-const-fn.rs:2:5
   |
LL |     val as usize;
   |     ^^^^^^^^^^^^
   |
   = note: at compile-time, pointers do not have an integer value
   = note: avoiding this restriction via `transmute`, `union`, or raw pointers leads to compile-time undefined behavior

error: aborting due to 1 previous error

